src/App.css
html {
  width: 100%;
  height: 100%;
  font-family: Inconsolata, monospace;
  font-size: 1.1rem;
  }

body {
  width: 100%;
  height: 100%;
}

.main-pre {
  opacity: 0;
}

main {
  width: 100%;
  height: 100%;
  display: flex;
  flex-wrap: wrap;
  opacity: 1;
  }

  .main-background{
    width: 100%;
    height: 100vh;
    transition: all ease-in 2s;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background: linear-gradient(-30deg, #df590bcc, #c43232c5, #2aafe0c7, #473b88c5) no-repeat center center fixed;
    background-size: 300% 300%;
    animation-name: background;
    animation-duration: 300s;
    animation-iteration-count: infinite;
    animation-timing-function: ease;
  }

  .main-background-inactive{
    width: 100%;
    height: 100%;
  }
  
    
  @keyframes background {
      0% {
        background-position: 0% 50%
      }
      50% {
        background-position: 100% 50%
      }
      100% {
        background-position: 0% 50%
      }
  }

#root {
  width: 100%;
  height: 100%;
}

.App {
  text-align: center;
}

.header {
  color: #000;
  font-weight: 7
  00;
  font-size: 2rem;
  font-family: 'Roboto Mono', monospace;
  position: absolute;
  z-index: 1000;
  text-align: center;
  width: 100%;
  padding-top: 6%;
}

/* Buttons!! */

.buttons-parent{
  position: absolute;
  z-index: 1000;
}


.button-container {
  position: absolute;
  z-index: 1000;
  width: 100%;
}

.buttons {
  padding: 1%;
  padding-top: 15%;
  width: 75%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-content: center;
}


.draw-border {
  box-shadow: inset 0 0 0 4px #4682B4;
  color: #5E54EA;
  transition: color 0.15s 0.0833333333s;
  position: relative;
}
.draw-border::before, .draw-border::after {
  border: 0 solid transparent;
  box-sizing: border-box;
  content: '';
  pointer-events: none;
  position: absolute;
  width: 0;
  height: 0;
  bottom: 0;
  right: 0;
}
.draw-border::before {
  border-bottom-width: 4px;
  border-left-width: 4px;
}
.draw-border::after {
  border-top-width: 4px;
  border-right-width: 4px;
}
.draw-border:hover {
  color: #E0FFFF;
}
.draw-border:hover::before, .draw-border:hover::after {
  border-color: #E0FFFF;
  transition: border-color 0s, width 0.25s, height 0.25s;
  width: 100%;
  height: 100%;
}
.draw-border:hover::before {
  transition-delay: 0s, 0s, 0.25s;
}
.draw-border:hover::after {
  transition-delay: 0s, 0.25s, 0s;
}
.btn {
  background: none;
  border: none;
  cursor: pointer;
  line-height: 1.5;
  font: 700 1.2rem 'Open Sans', sans-serif;
  padding: 1em 2em;
  letter-spacing: 0.05rem;
}
.btn:focus {
  box-shadow: inset 0 0 0 4px #E0FFFF;
  border: 1px solid #2F4F4F
}

.btn p {
  font-family: 'Roboto Mono', monospace;
  font-size: 0.8rem;
  margin: 0;
  color: white;
	text-shadow:
		-1px -1px 0 #000,
		1px -1px 0 #000,
		-1px 1px 0 #000,
		1px 1px 0 #000;
}

@media (max-width: 945px){
  .buttons{
    margin-top: 5%;
    margin-bottom: 3%;
  }

  .component-gradient{
    border-top: 1px solid oldlace;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: 300% 300%;
    background: linear-gradient(-30deg, #df590bcc, #c43232c5, #2aafe0c7, #473b88c5) no-repeat center center fixed;
    animation-name: background;
    animation-duration: 300s;
    animation-iteration-count: infinite;
    animation-timing-function: ease;
  }
    
  @keyframes background {
      0% {
        background-position: 0% 50%n
      }
      50% {
        background-position: 100% 50%
      }
      100% {
        background-position: 0% 50%
      }
    }
}

@media (max-height: 700px) {
  .buttons {
      padding-top: 12%;
  }
  .header {
    padding-top: 4%;
  }
}

@media (max-width: 680px){
  .buttons{
    width: 100%;
  }
}

@media only screen and (max-width: 670px) {
  .btn {
    margin: 6%;
  }
}

@media (max-width: 640px){
  .btn{
    margin: 1% auto;
    margin-top: 8%;
  }
  .header{
    padding-top: 6%;
  }
}

@media (max-width: 630px){

}

@media (max-width: 460px){
  .buttons{
    flex-direction: column;
    margin-top: 0%;
  }
  .btn{
    width: 40%;
  }
  .header{
    padding-top: 3%;
  }
}

@media (max-width: 415px){
  .btn {
    margin-top: 3%;
    padding: 4.5%;
  }
  .header{
    padding-top: 2%;
  }
}

@media (max-width: 390px){
  .btn {
    margin-top: 1%;
  }
  .btn p{
    font-size: 0.6rem;
    text-align: center;
  }
  .btn:first-child{
    margin-top: 0%;
  }
  .header{
    padding-top: 1%;
  }
}

@media (max-width: 350px){
  .btn .btn-text p{
    font-size: 0.5rem;
    text-align: center;
  }
}

@media (max-width: 320px) {
  .header {
    width: 100%;
    font-size: 1.5rem;
    margin: 1% auto;
  }
  .btn {
    padding: 4%;
  }
}

@media (max-width: 280px){
  .btn p{
    padding: 0% auto;
    font-size: 0.4rem;
    text-align: center;
  }
  .buttons{
    margin-top: 20%;
    height: 100%;
  }
}

